--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Jokempô</title>
 </head>
 <body>
@@ -15,10 +16,13 @@
                 <input type="radio" id="paper" name="option" value="paper">
                 <label for="paper">Papel</label>
                 <input type="radio" id="scissors" name="option" value="scissors">
-                <label for="scissors">tesoura</label>
+                <label for="scissors">Tesoura</label>
             </div>
             <div id="player2"></div>
+
+            <input type="button" value="Aperte" id="choose">
         </section>
     </main>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
